tests/fixtures/invalid/none_add_list.py
# Cannot add None and List[int]
x: None = None + [1, 2, 3]
